1999-10-19  Francis J. Lacoste  <francis.lacoste@iNsu.COM>

	TAG: IPV4ADDR_0_07

	* debian/:	Added debian packaging by Bernd Eckenfels
			<ecki@lina.inka.de>
	
	TAG: IPV4ADDR_0_06
	
	* IPv4Addr.pm:  Renamed module to Net::IPv4Addr.

1999-09-15  Francis J. Lacoste  <francis.lacoste@iNsu.COM>

	* IPv4Addr.pm:	Corrected errors in the documentation.

			TAG: IPV4ADDR_0_05.

1999-08-15  Francis J. Lacoste  <francis.lacoste@iNsu.COM>

	* IPv4Addr.pm (ipv4_in_netwrok): Fixed broken logic
			of ipv4_in_network. It didn't handle
			correctly network which weren't of 
			the same size.

			TAG: IPV4ADDR_0_04.

1999-07-05  Francis J. Lacoste  <francis.lacoste@iNsu.COM>

	* IPv4Addr.pm (ipv4_in_network): Added check for universal 
			broadcast address (255.255.255.255) and
			no address (0.0.0.0).

			TAG: IPV4ADDR_0_03.

1999-05-27  Francis J. Lacoste  <francis.lacoste@iNsu.COM>

	* IPv4Addr.pm: (ipv4_parse) removed some undefined warnings.
			Updated version to 0.02.
