@@ -1,7 +1,7 @@
 Net::IPv4Addr
 =================
 
-Version: 0.07
+Version: 0.08
 
 Description
 -----------
